--- a/src/Sass/Footer.sass
+++ b/src/Sass/Footer.sass
@@ -26,6 +26,10 @@ a
   color: #56585a
   border: 1px solid #e8e8e8 !important
   border-radius: 5px !important
+#mobile-row
+  padding-left: 30px
+#mobile-row2
+  padding-left: 20px
 
 
 
